# KTEngine

./: .gitignore  CMakeLists.txt  README.md  bundle_archives
Resources/Shaders/: SpriteShader.fs  TextShader.fs
example/: CMakeLists.txt
include/: .KTEngine.h.kate-swp  Engine.h  GameEngine.h  GameObject.h  IGameScene.h  IGameState.h  Input.h  KTECore.h  KTEngine.h  Resources.h  Window.h
include/Audio/: AudioBuffer.h  AudioData.h  AudioManager.h  AudioSource.h  AudioStream.h  KTEAudio.h
include/Components/: Animator.h  BoxCollider.h  Camera.h  ClickableComponent.h  IComponent.h  KTEComponents.h  KeyInputComponent.h  MouseInputComponent.h  MovementComponent.h  RenderComponent.h  SpriteComponent.h  TextComponent.h  Transformation.h  TransformationComponent.h
include/Graphics/: Animation.h  Button.h  Font.h  FontManager.h  FontTexture.h  GameSprite.h  Geometries.h  KTEGraphics.h  Material.h  Mesh.h  MeshManager.h  PostProcessing.h  Quad.h  RenderSystem.h  RenderTechnique.h  ShaderManager.h  SpriteTechnique.h  Text.h  TextTechnique.h  Texture.h  TextureManager.h
include/Graphics/RenderTechniques/: BasicTechnique.h  FontTechnique.h  RederTechniqueManager.h  Rendertechnique.h  SpriteTechnique.h
include/Messages/: ComponentAddedMessage.h  ContextChange.h  GameObjectRemovedMessage.h  Message.h
include/Resources/: AudioData.h  File.h  Font.h  IResource.h  KTEResources.h  ResourcePackage.h  Resources.h  TextureData.h
include/Systems/: AnimationSystem.h  ISystem.h  InputSystem.h  KTESystems.h  MovementSystem.h  RenderSystem.h
include/Utility/: Analytics.h  FPSCounter.h  KTEUtility.h  Math.h  Profiler.h  SaveTexture.h  Serializer.h  Time.h
include/Window/: InputManager.h  Window.h
src/: CMakeLists.txt  Engine.cpp  GameEngine.cpp  GameObject.cpp  IGameScene.cpp  Window.cpp
src/Audio/: AudioManager.cpp  AudioStream.cpp  CMakeLists.txt
src/Components/: CMakeLists.txt  Camera.cpp
src/Graphics/: CMakeLists.txt  Font.cpp  FontManager.cpp  GameSprite.cpp  Geometries.cpp  MeshManager.cpp  Quad.cpp  RenderSystem.cpp  ShaderManager.cpp  SpriteTechnique.cpp  Text.cpp  TextTechnique.cpp  Texture.cpp  TextureManager.cpp
src/Graphics/RenderTechniques/: BasicTechnique.cpp  FontTechnique.cpp  RenderTechniqueManagager.cpp  SpriteTechnique.cpp
src/Messages/: CMakeLists.txt
src/Resources/: CMakeLists.txt  ResourcePackage.cpp
src/Systems/: .RenderSystem.cpp.kate-swp  AnimationSystem.cpp  CMakeLists.txt  MovementSystem.cpp  RenderSystem.cpp
src/Utility/: Analytics.cpp  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Time.cpp  cmake_install.cmake
src/Window/: CMakeLists.txt  InputManager.cpp  Window.cpp
